cleaned up README

--- a/MazeWithNoWalls.ipynb
+++ b/MazeWithNoWalls.ipynb
@@ -33,9 +33,7 @@
     "\n",
     "We'll use some code called [webweb](https://webwebpage.github.io) that makes network visualizations easy from Python, recently rewritten by my grad student, [Hunter Wapman](http://twitter.com/hneutr). \n",
     "\n",
-    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 19. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. Image here, followed by the code and notes to reproduce all of this.\n",
-    "\n",
-    "\n",
+    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 18. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. \n",
     "\n",
     "**Network Traversal Approach (no viz)**\n",
     "Number the positions of the grid like a matrix, with (1,1) being the upper left entry, and (n,n) being the bottom right entry. Now consider a network whose directed edges describe movement as dictated by the rules of the maze... but rather than considering each square in the gride as a single vertex, let each square in the grid be represented by four vertices, enumerated {1,2,3,4} corresponding to {up,left,down,right} directions. \n",
