--- a/MazeWithNoWalls.ipynb
+++ b/MazeWithNoWalls.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,12 +252,23 @@
     "    elif char=='B':\n",
     "        return get_edge_boundary(i,j,n)\n",
     "    else:\n",
-    "        return []\n"
+    "        return []\n",
+    "\n",
+    "def clean_edges(edgelist,n):\n",
+    "    # remove any edge that points to B, since those result in losses. \n",
+    "    cleanedges = []\n",
+    "    for edge in edgelist:\n",
+    "        to = edge[1]\n",
+    "        if not np.any([to[0]==0,to[0]==(n-1),to[1]==0,to[1]==(n-1)]):\n",
+    "            cleanedges.append(edge)\n",
+    "        else:\n",
+    "            print(edge)\n",
+    "    return cleanedges"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,12 +301,13 @@
     "    for i,row in enumerate(grid):\n",
     "        for j,token in enumerate(row):\n",
     "            edgelist += get_edges(i,j,n,token)\n",
+    "    edgelist = clean_edges(edgelist,n)\n",
     "    return edgelist,rewrite_edgelist(edgelist,n,grid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,12 +371,12 @@
     "    web.display.freezeNodeMovement = True\n",
     "    web.display.width = dim\n",
     "    web.display.height = dim\n",
-    "    web.show()    "
+    "    return web"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -375,19 +387,31 @@
       "B U L X B \n",
       "B U G ? B \n",
       "B U L X B \n",
-      "  B B B   \n"
+      "  B B B   \n",
+      "[[1, 1, 0], [0, 1, 2]]\n",
+      "[[1, 1, 1], [1, 0, 3]]\n",
+      "[[1, 2, 1], [0, 2, 2]]\n",
+      "[[2, 1, 1], [2, 0, 3]]\n",
+      "[[2, 3, 0], [2, 4, 1]]\n",
+      "[[2, 3, 1], [2, 4, 1]]\n",
+      "[[2, 3, 2], [2, 4, 1]]\n",
+      "[[2, 3, 3], [2, 4, 1]]\n",
+      "[[3, 1, 1], [3, 0, 3]]\n",
+      "[[3, 1, 2], [4, 1, 0]]\n",
+      "[[3, 2, 3], [4, 2, 0]]\n"
      ]
     }
    ],
    "source": [
     "board = [\n",
     "    ['U','L','X'],['U','G','?'],['U','L','X']]\n",
-    "visualize_board(board)"
+    "web = visualize_board(board)\n",
+    "web.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +427,41 @@
       "B S ? S L S S L R B \n",
       "B R L R ? R L ? L B \n",
       "B L R S R S L R L B \n",
-      "  B B B B B B B B   \n"
+      "  B B B B B B B B   \n",
+      "[[1, 1, 1], [0, 1, 2]]\n",
+      "[[1, 1, 2], [1, 0, 3]]\n",
+      "[[1, 2, 0], [0, 2, 2]]\n",
+      "[[1, 3, 0], [0, 3, 2]]\n",
+      "[[1, 4, 0], [0, 4, 2]]\n",
+      "[[1, 4, 1], [0, 4, 2]]\n",
+      "[[1, 4, 2], [0, 4, 2]]\n",
+      "[[1, 4, 3], [0, 4, 2]]\n",
+      "[[1, 5, 0], [0, 5, 2]]\n",
+      "[[1, 6, 1], [0, 6, 2]]\n",
+      "[[1, 8, 0], [1, 9, 1]]\n",
+      "[[1, 8, 1], [0, 8, 2]]\n",
+      "[[2, 1, 0], [2, 0, 3]]\n",
+      "[[2, 8, 3], [2, 9, 1]]\n",
+      "[[3, 1, 3], [3, 0, 3]]\n",
+      "[[3, 8, 2], [3, 9, 1]]\n",
+      "[[4, 1, 1], [4, 0, 3]]\n",
+      "[[4, 8, 2], [4, 9, 1]]\n",
+      "[[5, 1, 0], [5, 0, 3]]\n",
+      "[[5, 8, 0], [5, 9, 1]]\n",
+      "[[6, 1, 3], [6, 0, 3]]\n",
+      "[[6, 8, 2], [6, 9, 1]]\n",
+      "[[7, 1, 0], [7, 0, 3]]\n",
+      "[[7, 8, 0], [7, 9, 1]]\n",
+      "[[8, 1, 2], [8, 0, 3]]\n",
+      "[[8, 1, 3], [9, 1, 0]]\n",
+      "[[8, 2, 1], [9, 2, 0]]\n",
+      "[[8, 3, 0], [9, 3, 0]]\n",
+      "[[8, 4, 1], [9, 4, 0]]\n",
+      "[[8, 5, 0], [9, 5, 0]]\n",
+      "[[8, 6, 3], [9, 6, 0]]\n",
+      "[[8, 7, 1], [9, 7, 0]]\n",
+      "[[8, 8, 0], [8, 9, 1]]\n",
+      "[[8, 8, 3], [9, 8, 0]]\n"
      ]
     }
    ],
@@ -420,12 +478,13 @@
     "board538 = []\n",
     "for row in b538:\n",
     "    board538.append(list(row))\n",
-    "visualize_board(board538)"
+    "web = visualize_board(board538)\n",
+    "web.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +500,7 @@
        " ['L', 'R', 'S', 'R', 'S', 'L', 'R', 'L']]"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,6 +508,13 @@
    "source": [
     "board538"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
