--- a/MazeWithNoWalls.ipynb
+++ b/MazeWithNoWalls.ipynb
@@ -33,20 +33,7 @@
     "\n",
     "We'll use some code called [webweb](https://webwebpage.github.io) that makes network visualizations easy from Python, recently rewritten by my grad student, [Hunter Wapman](http://twitter.com/hneutr). \n",
     "\n",
-    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 18. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. \n",
-    "\n",
-    "**Network Traversal Approach (no viz)**\n",
-    "Number the positions of the grid like a matrix, with (1,1) being the upper left entry, and (n,n) being the bottom right entry. Now consider a network whose directed edges describe movement as dictated by the rules of the maze... but rather than considering each square in the gride as a single vertex, let each square in the grid be represented by four vertices, enumerated {1,2,3,4} corresponding to {up,left,down,right} directions. \n",
-    "\n",
-    "This means that we're going to take the $n^2$ positions in the grid and from them create $4n^2$ vertices in a network of one-hop moves. We'll also add another set of vertices representing the possible entry points to the game board from the outside, another $4n$ vertices. In total, our graph will have $N = 4n^2 + 4n$ vertices, or, if you've been taught to factor everything, $N = 4n(n+1)$ vertices. \n",
-    "\n",
-    "For convenience, we'll enumerate the vertices using 3 coordinates $(i,j,k)$ where $i$ and $j$ represent the position in the matrix (with row/column 0 and row/column $n$ being the boundaries) and $k \\in \\{1,2,3,4\\}$ representing the four directions. (When this is coded up, we'll write 1-to-4 as 0-to-3 because python is zero-indexed).\n",
-    "\n",
-    "Once we have the \"forward\" network, whose directed adjacency matrix is given by $A$---where $A_{uv}$ means that you can move from $u \\to v$ in one step---our questions are generic network traversal questions. The transpose $B = A^{T}$ represents the movements _backward_ along the graph, and the entries of $B^t$ represent the number of paths there are from one node to another, backwards, in exactly $t$ steps. This means that we can consider the set of entries of $B^t$ that represent backward paths from **our goal** (a set of 4 nodes!) to **any boundary** (a set of 4n nodes!). Increment $t$ until one of those entries of $B^t$ is nonzero, and that's your answer to the puzzle. \n",
-    "\n",
-    "Note that the puzzle doesn't actually ask for the path, just the minimum number of steps, so we're good to use this method. \n",
-    "\n",
-    "Also note that _if_ the goal is unreachable, there will be no value of $t$ that allows us to move all the way through the graph. A cheap upper bound on $t$ should be $N-1$, since the longest traversal of the network would touch all nodes before getting to the goal, and I call this a cheap bound because $N$ includes the boundary nodes, which any maximum-length traversal would include only one of.\n"
+    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 18. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. "
    ]
   },
   {
@@ -172,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +249,8 @@
     "        if not np.any([to[0]==0,to[0]==(n-1),to[1]==0,to[1]==(n-1)]):\n",
     "            cleanedges.append(edge)\n",
     "        else:\n",
-    "            print(edge)\n",
+    "            continue\n",
+    "#             print(edge)\n",
     "    return cleanedges"
    ]
   },
@@ -330,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +332,7 @@
     "    visn = np.size(board,0)-1\n",
     "    dxdy = {0:[0,-1], 1:[-1,0], 2:[0,1], 3:[1,0]}\n",
     "    nodes = {}\n",
+    "    onpath = [250,253,215,254,257,217,178,183,220,216,214,218,223,260,259,298,302,305,265,225,184,181,143,180,177,139,176,175,213,172,171,209,168,164,162] \n",
     "    for idx,edge in enumerate(edgelist):\n",
     "        i = raw[idx][0]\n",
     "        label = board[i[0]][i[1]]\n",
@@ -352,6 +341,7 @@
     "        nodes[nodenumber]['rule'] = expanded_labels[label]       \n",
     "        nodes[nodenumber]['y'] = (i[0] + 0.1*dxdy[i[2]][1])/visn*(1-2*pad)*dim + pad*dim\n",
     "        nodes[nodenumber]['x'] = (i[1] + 0.1*dxdy[i[2]][0])/visn*(1-2*pad)*dim + pad*dim\n",
+    "        nodes[nodenumber]['onpath'] = (nodenumber in onpath)\n",
     "\n",
     "        j = raw[idx][1]\n",
     "        label = board[j[0]][j[1]]\n",
@@ -360,9 +350,12 @@
     "        nodes[nodenumber]['rule'] = expanded_labels[label] \n",
     "        nodes[nodenumber]['y'] = (j[0] + 0.1*dxdy[j[2]][1])/visn*(1-2*pad)*dim + pad*dim\n",
     "        nodes[nodenumber]['x'] = (j[1] + 0.1*dxdy[j[2]][0])/visn*(1-2*pad)*dim + pad*dim\n",
+    "        nodes[nodenumber]['onpath'] = (nodenumber in onpath)\n",
+    "        \n",
     "    web = Web(\n",
+    "        title = '538Maze',\n",
     "        adjacency = edgelist,\n",
-    "        display ={\n",
+    "        display = {\n",
     "            'nodes' : nodes,\n",
     "        }\n",
     "    )\n",
@@ -376,42 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  B B B   \n",
-      "B U L X B \n",
-      "B U G ? B \n",
-      "B U L X B \n",
-      "  B B B   \n",
-      "[[1, 1, 0], [0, 1, 2]]\n",
-      "[[1, 1, 1], [1, 0, 3]]\n",
-      "[[1, 2, 1], [0, 2, 2]]\n",
-      "[[2, 1, 1], [2, 0, 3]]\n",
-      "[[2, 3, 0], [2, 4, 1]]\n",
-      "[[2, 3, 1], [2, 4, 1]]\n",
-      "[[2, 3, 2], [2, 4, 1]]\n",
-      "[[2, 3, 3], [2, 4, 1]]\n",
-      "[[3, 1, 1], [3, 0, 3]]\n",
-      "[[3, 1, 2], [4, 1, 0]]\n",
-      "[[3, 2, 3], [4, 2, 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "board = [\n",
-    "    ['U','L','X'],['U','G','?'],['U','L','X']]\n",
-    "web = visualize_board(board)\n",
-    "web.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -427,41 +385,7 @@
       "B S ? S L S S L R B \n",
       "B R L R ? R L ? L B \n",
       "B L R S R S L R L B \n",
-      "  B B B B B B B B   \n",
-      "[[1, 1, 1], [0, 1, 2]]\n",
-      "[[1, 1, 2], [1, 0, 3]]\n",
-      "[[1, 2, 0], [0, 2, 2]]\n",
-      "[[1, 3, 0], [0, 3, 2]]\n",
-      "[[1, 4, 0], [0, 4, 2]]\n",
-      "[[1, 4, 1], [0, 4, 2]]\n",
-      "[[1, 4, 2], [0, 4, 2]]\n",
-      "[[1, 4, 3], [0, 4, 2]]\n",
-      "[[1, 5, 0], [0, 5, 2]]\n",
-      "[[1, 6, 1], [0, 6, 2]]\n",
-      "[[1, 8, 0], [1, 9, 1]]\n",
-      "[[1, 8, 1], [0, 8, 2]]\n",
-      "[[2, 1, 0], [2, 0, 3]]\n",
-      "[[2, 8, 3], [2, 9, 1]]\n",
-      "[[3, 1, 3], [3, 0, 3]]\n",
-      "[[3, 8, 2], [3, 9, 1]]\n",
-      "[[4, 1, 1], [4, 0, 3]]\n",
-      "[[4, 8, 2], [4, 9, 1]]\n",
-      "[[5, 1, 0], [5, 0, 3]]\n",
-      "[[5, 8, 0], [5, 9, 1]]\n",
-      "[[6, 1, 3], [6, 0, 3]]\n",
-      "[[6, 8, 2], [6, 9, 1]]\n",
-      "[[7, 1, 0], [7, 0, 3]]\n",
-      "[[7, 8, 0], [7, 9, 1]]\n",
-      "[[8, 1, 2], [8, 0, 3]]\n",
-      "[[8, 1, 3], [9, 1, 0]]\n",
-      "[[8, 2, 1], [9, 2, 0]]\n",
-      "[[8, 3, 0], [9, 3, 0]]\n",
-      "[[8, 4, 1], [9, 4, 0]]\n",
-      "[[8, 5, 0], [9, 5, 0]]\n",
-      "[[8, 6, 3], [9, 6, 0]]\n",
-      "[[8, 7, 1], [9, 7, 0]]\n",
-      "[[8, 8, 0], [8, 9, 1]]\n",
-      "[[8, 8, 3], [9, 8, 0]]\n"
+      "  B B B B B B B B   \n"
      ]
     }
    ],
@@ -481,47 +405,6 @@
     "web = visualize_board(board538)\n",
     "web.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['L', 'U', 'U', '?', 'U', 'L', 'X', 'L'],\n",
-       " ['R', 'L', 'R', 'L', 'U', 'G', 'U', 'U'],\n",
-       " ['S', 'L', 'R', 'L', 'U', 'L', 'X', 'R'],\n",
-       " ['U', 'R', '?', 'R', 'S', 'L', '?', 'R'],\n",
-       " ['R', 'U', 'U', 'R', 'R', 'R', 'S', 'L'],\n",
-       " ['S', '?', 'S', 'L', 'S', 'S', 'L', 'R'],\n",
-       " ['R', 'L', 'R', '?', 'R', 'L', '?', 'L'],\n",
-       " ['L', 'R', 'S', 'R', 'S', 'L', 'R', 'L']]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board538"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
