--- a/MazeWithNoWalls.ipynb
+++ b/MazeWithNoWalls.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "We'll use some code called [webweb](https://webwebpage.github.io) that makes network visualizations easy from Python, recently rewritten by my grad student, [Hunter Wapman](http://twitter.com/hneutr). \n",
     "\n",
-    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 18. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. "
+    "The code plots the network as a grid, as described above, and it freeze the position of the nodes. **You can move the nodes around with your mouse if you like** and trace the escape path. I get a path length of 34. You can also uncheck the box that freezes node movement, and the system will \"relax\" allowing you to chart the number of hops from the Goal to the Boundary. I think it helps to set the node size to \"onPath\" to highlight the minimum path."
    ]
   },
   {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -405,6 +405,13 @@
     "web = visualize_board(board538)\n",
     "web.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
